--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -1,21 +1,20 @@
-<section class="container-lg">
-    <h1>Homepage</h1>
+<h1 class="page-title mb-3">Posts List</h1>
 
-    {{#if posts}}
-        <ul class="posts-list">
-        {{#each posts as |post|}}
-            <li class="post-item">
-                <div class="post-header">
-                    <h2 class="post-title">{{post.title}}</h2>
-                    <p class="post-author">{{post.author}}</p>
-                </div>
-                <div class="post-body">
-                    <p class="post-text">{{post.text}}</p>
-                </div>
-            </li>
-        {{/each}}
-        </ul>
-    {{else}}
-        <p class="message">No posts!</p>
-    {{/if}}
-</section>
+{{#if posts}}
+    {{#each posts as |post|}}
+        <div class="card text-white bg-dark mb-2 post-item">
+            <div class="card-header">
+                <h2 class="post-title">{{post.title}}</h2>
+            </div>
+            <div class="card-body">
+                <p class="text-truncate">{{post.text_content}}</p>
+                <a href="/post/{{post.id}}" class="stretched-link text-info">Read more</a>
+            </div>
+            <div class="card-footer">
+                <small class="text-muted">Posted by {{post.user.name}} on {{post.creation_date}}</small>
+            </div>
+        </div>
+    {{/each}}
+{{else}}
+    <div class="alert alert-info" role="alert">No posts!</div>
+{{/if}}
