--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -11,13 +11,12 @@
                 <input class="form-control" type="password" id="login-password" name="password" required />
             </div>
             <div class="mb-3">
-                <button class="btn btn-primary" type="submit">Login</button>
+                <button class="btn btn-outline-dark" type="submit">Login</button>
                 <button class="btn btn-link js-block-toggle" type="button">Signup instead</button>
             </div>
         </form>
     </section>
-</div>
-<div class="row justify-content-center">
+
     <section class="col-12 col-md-8 col-lg-6 align-self-center d-none" id="js-signup-block">
         <h2 class="mb-3">Sign Up</h2>
         <form id="js-signup-form">
@@ -34,7 +33,7 @@
                 <input class="form-control" type="password" id="signup-password" name="password" required />
             </div>
             <div class="mb-3">
-                <button class="btn btn-primary" type="submit">Signup</button>
+                <button class="btn btn-outline-dark" type="submit">Signup</button>
                 <button class="btn btn-link js-block-toggle" type="button">Login instead</button>
             </div>
         </form>
