--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -36,7 +36,7 @@
         </div>
     </nav>
 
-    <div class="container-xxl py-3">
+    <div class="container-xxl p-3">
         {{{body}}}
     </div>
 
