Update new post form label.

--- a/views/dashboardPage.handlebars
+++ b/views/dashboardPage.handlebars
@@ -9,7 +9,7 @@
         <input type="text" class="form-control" id="post-title" name="post-title" required>
     </div>
     <div class="mb-3">
-        <label for="post-text" class="form-label">Post text</label>
+        <label for="post-text" class="form-label">Post Text</label>
         <textarea class="form-control" id="post-text" name="post-text" rows="3" required></textarea>
     </div>
     <div class="mb-3">
