Add functionality for post updating.

--- a/views/postPage.handlebars
+++ b/views/postPage.handlebars
@@ -33,7 +33,9 @@
         <p class="text-muted">This post has no comments.</p>
     {{/if}}
 
-    <script src="/js/post.js"></script>
+    <script src="/js/comment.js"></script>
 {{else}}
     <p class="text-muted">To leave a comment you need to <a href="/login">login</a></p>
 {{/if}}
+
+<script src="/js/post.js"></script>
