--- a/views/dashboardPage.handlebars
+++ b/views/dashboardPage.handlebars
@@ -25,6 +25,7 @@
                 <p class="text-truncate">{{post.text_content}}</p>
                 <div class="">
                     <a href="/post/{{post.id}}" class="btn btn-sm btn-outline-dark">View Post</a>
+                    <a href="/post/edit/{{post.id}}" class="btn btn-sm btn-outline-dark">Edit Post</a>
                     <button class="btn btn-sm btn-outline-dark js-delete-post-btn" data-post-id="{{post.id}}">Delete Post</button>
                 </div>
             </div>
